--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "@oly_op/pipe",
 	"type": "module",
 	"license": "MIT",
 	"version": "1.0.1",
-	"main": "lib/index.js",
-	"types": "lib/index.d.ts",
+	"name": "@oly_op/pipe",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"keywords": [
 		"pipe"
 	],
