--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 	"compilerOptions": {
 		"strict": true,
 		"outDir": "dist",
+		"rootDir": "src",
+		"sourceMap": true,
 		"target": "ESNEXT",
 		"declaration": true,
 		"module": "CommonJS",
@@ -15,7 +17,7 @@
 		"forceConsistentCasingInFileNames": true
 	},
 	"include": [
-		"index.ts"
+		"src"
 	],
 	"exclude": [
 		"dist",
