--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,14 +8,15 @@
 	"less.validate": false,
 	"scss.validate": false,
 	"editor.lineHeight": 24,
-	"git.confirmSync": false,
   "editor.folding": false,
-	"editor.fontWeight": "600",
-	"workbench.tree.indent": 20,
+	"git.confirmSync": false,
 	"editor.lineNumbers": "off",
+	"workbench.tree.indent": 20,
+	"editor.glyphMargin": false,
+	"editor.fontWeight": "bold",
+	"editor.cursorStyle": "line",
 	"editor.insertSpaces": false,
 	"breadcrumbs.enabled": false,
-  "editor.glyphMargin": false,
 	"editor.formatOnPaste": false,
 	"git.enableSmartCommit": true,
 	"editor.fontLigatures": false,
@@ -24,6 +25,9 @@
 	"explorer.confirmDelete": false,
 	"editor.minimap.enabled": false,
   "eslint.alwaysShowStatus": true,
+	"npm.enableRunFromFolder": false,
+	"editor.cursorBlinking": "smooth",
+	"npm.enableScriptExplorer": false,
 	"files.insertFinalNewline": false,
 	"typescript.format.enable": false,
 	"editor.renderWhitespace": "none",
@@ -32,17 +36,25 @@
 	"terminal.integrated.fontSize": 16,
 	"editor.renderIndentGuides": false,
 	"editor.wrappingStrategy": "simple",
+	"workbench.sideBar.location": "left",
+	"workbench.editor.tabSizing": "fit",
+	"workbench.statusBar.visible": true,
 	"scss.colorDecorators.enable": false,
 	"explorer.confirmDragAndDrop": false,
 	"workbench.colorTheme": "GitHub Plus",
 	"workbench.activityBar.visible": false,
-	"terminal.integrated.fontWeight": "600",
+	"terminal.integrated.fontWeight": "800",
 	"editor.renderControlCharacters": false,
+	"workbench.editor.labelFormat": "medium",
+	"workbench.editor.tabCloseButton": "off",
+	"extensions.ignoreRecommendations": true,
+	"terminal.integrated.confirmOnExit": true,
 	"terminal.integrated.rendererType": "dom",
-  "extensions.ignoreRecommendations": true,
-	"typescript.tsdk": "./node_modules\\typescript\\lib",
+	"editor.find.autoFindInSelection": "never",
+	"editor.fontFamily": "Liberation Mono, monospace",
+	"typescript.tsdk": "./node_modules/typescript/lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
-	"editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
+	"terminal.integrated.fontFamily": "Liberation Mono, monospace",
 	"terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
 	"eslint.validate": [
 		"javascript",
@@ -51,8 +63,9 @@
 		"typescriptreact"
 	],
 	"files.exclude": {
-		// ".vscode/": true,
+		".vscode/": true,
 		"node_modules/": true,
+		// "dist": true,
 		".env": true
 	}
 }
