--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"type": "module",
 	"license": "MIT",
-	"version": "2.1.2",
+	"version": "2.1.3",
 	"name": "@oly_op/pipe",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -25,7 +25,8 @@
 	"scripts": {
 		"postpublish": "npm run push",
 		"delete-build": "rm -r -f dist",
-		"prepublishOnly": "npm run build",
+		"build:esm": "npx tsc --module esnext",
+		"build:cjs": "npx tsc --module commonjs",
 		"build": "npm run delete-build && npx tsc",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
