--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"license": "MIT",
-	"version": "2.1.5",
+	"version": "2.1.6",
 	"name": "@oly_op/pipe",
-	"main": "dist/index",
+	"main": "dist",
 	"types": "dist/index.d.ts",
 	"keywords": [
 		"pipe"
