--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"type": "module",
 	"license": "MIT",
-	"version": "2.1.7",
+	"version": "2.1.8",
 	"name": "@oly_op/pipe",
-	"main": "dist",
+	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"keywords": [
 		"pipe"
