--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
 		"@typescript-eslint/comma-spacing": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/prefer-regexp-exec": "off",
+		"node/no-unsupported-features/es-syntax": "off",
 		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"node/no-process-env": "error",
