--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"main": "dist",
 	"license": "MIT",
 	"version": "3.1.0",
 	"description": "pipe",
 	"name": "@oly_op/pipe",
+	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"bugs": "https://github.com/olyop/pipe/issues",
 	"homepage": "https://github.com/olyop/pipe/blob/master/README.md",
@@ -24,10 +24,9 @@
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master"
 	},
 	"devDependencies": {
+		"@oly_op/eslint-config": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^3.7.1",
-		"@typescript-eslint/parser": "^3.7.1",
 		"eslint": "^7.3.1",
-		"eslint-config-airbnb-typescript": "^9.0.0",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
